--- a/autoshop/shop/static/css/styles.css
+++ b/autoshop/shop/static/css/styles.css
@@ -125,7 +125,8 @@ body {
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
-  background-color: var(--bs-body-bg);
+  /*background-color: var(--bs-body-bg);*/
+  background-image: url(back.jpg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -10962,4 +10963,14 @@ textarea.form-control-lg {
 
 .tags {
     margin-left: 15px;
+}
+
+.form-custom {
+    flex-direction: row;
+    display: flex;
+    margin-top: 35px;
+}
+
+.butt {
+    margin-left: 150px;
 }
