--- a/autoshop/shop/templates/shop/base.html
+++ b/autoshop/shop/templates/shop/base.html
@@ -21,7 +21,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Категории</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li> {% if not category %} {% endif %}
                                     <a class="dropdown-item" href="{% url 'shop:component_list' %}">Все детали</a>
@@ -41,26 +41,24 @@
                             </ul>
                         </li>
                     </ul>
-                    <!--
                     <form class="d-flex">
-                       {#% with total_items=cart|length %}
-                            {#% if cart|length > 0 %}
+                       {% with total_items=cart|length %}
+                            {% if cart|length > 0 %}
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
-                            Your cart:
+                            Ваша корзина:
                             <span class="badge bg-dark text-white ms-1 rounded-pill">
-                               <a href="{#% url 'cart:cart_detail' %}">
-                                    {#{ total_items }} item{#{ total_items|pluralize }},
-                                   ${#{ cart.get_total_price }}
+                               <a href="{% url 'cart:cart_detail' %}">
+                                    {{ total_items }} {{ total_items|pluralize }},
+                                    {{ cart.get_total_price }}
                                 </a>
-                            {#% else %}
-                                Your cart is empty.
-                            {#% endif %}
+                            {% else %}
+                                Ваша корзина пуста.
+                            {% endif %}
                             </span>
-                        {#% endwith %}
+                        {% endwith %}
                         </button>
                     </form>
-                -->
                 </div>
             </div>
         </nav>
@@ -81,13 +79,11 @@
         <!-- Section-->
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
-
                 {% block content %}
                 {% endblock %}
                 </div>
             </div>
         </section>
-
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
