--- a/autoshop/shop/templates/shop/base.html
+++ b/autoshop/shop/templates/shop/base.html
@@ -40,7 +40,18 @@
                                 {% endfor %}
                             </ul>
                         </li>
+
                     </ul>
+                    <div class="cont">
+                        <a class="cont-link" href="{% url 'shop:about_contacts' %}">
+                            <span class="navbar-brand">Контакты</span>
+                        </a>
+                    <form action="{% url 'shop:search_results' %}" method="get" class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-4 my-2 my-md-0">
+                        <div class="input-group">
+                            <input class="form-control" type="text" name="q" placeholder="Введите название или номер детали" aria-label="Введите название или номер детали" aria-describedby="btnNavbarSearch" />
+                            <button class="btn btn-outline-dark" id="btnNavbarSearch" type="submit"><i class="fas fa-search"></i>Поиск</button>
+                        </div>
+                    </form>
                     <form class="d-flex">
                        {% with total_items=cart|length %}
                             {% if cart|length > 0 %}
@@ -59,6 +70,7 @@
                         {% endwith %}
                         </button>
                     </form>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -71,7 +83,7 @@
                 </div>
             </div>
         </header>
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom search-detail">
             <div class="sb-sidenav-collapse-arrow">
                 <p class="card-header">Всего {% total_components %} деталей в продаже </p>
             </div>
@@ -84,6 +96,13 @@
                 </div>
             </div>
         </section>
+      <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
+        <div class="container text-center">
+          <!--<a href="#">
+            <small class="text-white-50">Контакты</small>
+          </a>-->
+        </div>
+      </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
